# agent-dev

./: Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
cli/: README.md  main.py
cli/commands/: data.py
dev/execute/: simple_response.py
documents/prompts/: lang_explanation.json
documents/sample/: info_density_sample.txt
llm/: base.py
llm/anthropic/: client.py
llm/gemini/: client.py
llm/grok/: client.py
llm/openai/: client.py
nl_processor/analyzer/: info-density.py  info_density.py
nl_processor/embedding/: base.py
nl_processor/embedding/gemini/: client.py
nl_processor/embedding/openai/: client.py
nl_processor/embedding/voyage/: client.py
test/: test_data_handler.py
tts/: base.py
utils/: data_handler.py  date.py
